--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -51,7 +51,7 @@ jobs:
           tags: |
             type=raw,value=${{ matrix.ROS_DISTRO }}
 
-      # AMD64 build
+      # amd64 build
       - if: github.event_name == 'push'
         name: Build and push (non PR)
         uses: docker/bake-action@v5.7.0
@@ -65,11 +65,11 @@ jobs:
             ${{ steps.meta.outputs.bake-file }}
           push: ${{ env.PUSH }}
           set: |
-            *.platform = ["linux/amd64"]
+            *.platforms = ["linux/amd64"]
             *.cache-from=type=registry,ref=ghcr.io/${{ github.repository }}:cache-amd64-${{ matrix.ROS_DISTRO }}
             *.cache-to=type=registry,mode=max,ref=ghcr.io/${{ github.repository }}:cache-amd64-${{ matrix.ROS_DISTRO }}
 
-      # ARM64 build
+      # arm64 build
       - if: github.event_name == 'push'
         name: Build and push (non PR)
         uses: docker/bake-action@v5.7.0
@@ -83,11 +83,11 @@ jobs:
             ${{ steps.meta.outputs.bake-file }}
           push: ${{ env.PUSH }}
           set: |
-            *.platform = ["linux/arm64"]
+            *.platforms = ["linux/arm64"]
             *.cache-from=type=registry,ref=ghcr.io/${{ github.repository }}:cache-arm64-${{ matrix.ROS_DISTRO }}
             *.cache-to=type=registry,mode=max,ref=ghcr.io/${{ github.repository }}:cache-arm64-${{ matrix.ROS_DISTRO }}
 
-
+      # Merge amd64 and arm64 images
       - if: github.event_name == 'push'
         name: Create multi-platform manifest
         uses: int128/docker-manifest-create-action@v2
