--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -65,7 +65,7 @@ jobs:
             ${{ steps.meta.outputs.bake-file }}
           push: ${{ env.PUSH }}
           set: |
-            *.platforms = [ "linux/amd64" ]
+            *.platform=linux/amd64
             *.cache-from=type=registry,ref=ghcr.io/${{ github.repository }}:cache-amd64-${{ matrix.ROS_DISTRO }}
             *.cache-to=type=registry,mode=max,ref=ghcr.io/${{ github.repository }}:cache-amd64-${{ matrix.ROS_DISTRO }}
 
@@ -83,7 +83,7 @@ jobs:
             ${{ steps.meta.outputs.bake-file }}
           push: ${{ env.PUSH }}
           set: |
-            *.platforms = [ "linux/arm64" ]
+            *.platform=linux/arm64
             *.cache-from=type=registry,ref=ghcr.io/${{ github.repository }}:cache-arm64-${{ matrix.ROS_DISTRO }}
             *.cache-to=type=registry,mode=max,ref=ghcr.io/${{ github.repository }}:cache-arm64-${{ matrix.ROS_DISTRO }}
 
@@ -109,6 +109,6 @@ jobs:
           files: |
             ./docker-bake.hcl
           set: |
-            *.platforms = [ "linux/amd64" ]
+            *.platform=linux/amd64
             *.cache-from=type=registry,ref=ghcr.io/${{ github.repository }}:cache-amd64-${{ matrix.ROS_DISTRO }}
             *.cache-to=
